# AblacioCardiaca

./: AblacioCardiaca.cpp  CMakeLists.txt  GraficosAblacion.py  README.md  solucionanalitica.py
data/: Ablacio_Explicit_025.txt  Ablacio_Explicit_049.txt  Ablacio_Explicit_051.txt  Ablacio_Explicit_51.txt  Ablacio_Implicit100.txt
tramesa/: tramesa.txt  tramesa_explicit.txt  tramesa_implicit.txt
